--- a/hw/as3/db21-assignment-3/.vscode/launch.json
+++ b/hw/as3/db21-assignment-3/.vscode/launch.json
@@ -82,6 +82,10 @@
         {
             "name": "RunBenchmark",
             "configurations": ["Launch Bench Server", "Launch Bench Client 2"],
+        },
+        {
+            "name": "RunSQL",
+            "configurations": ["Launch DB", "Launch ConsoleSQLInterpreter"],
         }
     ]
 }
