--- a/hw/as5/db21-assignment-5/.vscode/settings.json
+++ b/hw/as5/db21-assignment-5/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
         "workspce"
+    ],
+    "todohighlight.keywords": [
+        "MODIFIED:",
+        "NOTE:",
+        "DEBUG:",
     ]
 }
