--- a/hw/as5/working/db21-assignment-5-2/core-patch/src/test/resources/org/vanilladb/core/vanilladb.properties
+++ b/hw/as5/working/db21-assignment-5-2/core-patch/src/test/resources/org/vanilladb/core/vanilladb.properties
@@ -154,11 +154,13 @@ org.vanilladb.core.remote.jdbc.RemoteConnectionImpl.DEFAULT_ISOLATION_LEVEL=8
 # The type of query planner. There are two types of planners can be use, 
 # "org.vanilladb.core.query.planner.BasicQueryPlanner",
 # "org.vanilladb.core.query.planner.opt.HeuristicQueryPlanner".
-org.vanilladb.core.server.VanillaDb.QUERYPLANNER=org.vanilladb.core.query.planner.opt.HeuristicQueryPlanner
+# org.vanilladb.core.server.VanillaDb.QUERYPLANNER=org.vanilladb.core.query.planner.opt.HeuristicQueryPlanner
+org.vanilladb.core.server.VanillaDb.QUERYPLANNER=org.vanilladb.core.query.planner.BasicQueryPlanner
 # The type of update planner. There are two types of planners can be use, 
 # "org.vanilladb.core.query.planner.BasicUpdatePlanner",
 # "org.vanilladb.core.query.planner.index.IndexUpdatePlanner".
-org.vanilladb.core.server.VanillaDb.UPDATEPLANNER=org.vanilladb.core.query.planner.index.IndexUpdatePlanner
+# org.vanilladb.core.server.VanillaDb.UPDATEPLANNER=org.vanilladb.core.query.planner.index.IndexUpdatePlanner
+org.vanilladb.core.server.VanillaDb.UPDATEPLANNER=org.vanilladb.core.query.planner.BasicUpdatePlanner
 # The type of store procedure factory that will determine which store procedure to be used.
 # There is only one type of store procedure factory in VanillaDb-Core right now.
 # If you implements your own factory, please change this property.
